--- a/src/main/resources/templates/layouts/Master/QuotationDetail.html
+++ b/src/main/resources/templates/layouts/Master/QuotationDetail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<head >
+<head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>EBS</title>
@@ -147,11 +147,11 @@
 																<div class="form-group col-md-4">
 																	<label class="form-label ">Supplier </label> <label
 																		style="color: red">*</label> <select
-																		class="form-control suppContainer" onchange="supplierInfo1()"
-																		title="supplier " id="supplierId"
-																		th:field="*{suplierCode}">
+																		class="form-control suppContainer"
+																		onchange="supplierInfo1()" title="supplier "
+																		id="supplierId" th:field="*{suplierCode}">
 																		<option value="">Select</option>
-																	<!-- 	<option th:each="supp :  ${listSupplier}"
+																		<!-- 	<option th:each="supp :  ${listSupplier}"
 																			th:text="${supp.supplierName}"
 																			th:value=" ${supp.supplierId}"></option> -->
 																	</select>
@@ -164,18 +164,16 @@
 																		th:field="*{tempSupName}">
 																</div>
 																<div class="form-group col-md-4">
-																	<label for="inputPassword4">SupplierState</label> 
-																		<select
-																			class="form-control" required
-																			 id="supplierState" title="supplier State"
-																			th:field="*{supCityCode}">
-																				<option value=" ">Select</option>
-																				<option th:each="state :  ${listStates}"
-																					th:text="${state.stateName}"
-																					th:value=" ${state.stateCode}"></option>
+																	<label for="inputPassword4">SupplierState</label> <select
+																		class="form-control" required id="supplierState"
+																		title="supplier State" th:field="*{supCityCode}">
+																		<option value=" ">Select</option>
+																		<option th:each="state :  ${listStates}"
+																			th:text="${state.stateName}"
+																			th:value=" ${state.stateCode}"></option>
 
 
-																		</select>
+																	</select>
 																</div>
 
 																<div class="form-group col-md-4">
@@ -184,18 +182,16 @@
 																		placeholder="received on" th:field="*{fromCode}">
 																</div>
 																<div class="form-group col-md-4">
-																	<label for="inputAddress">Supplier City</label>
-																		<select
-																			class="form-control" required
-																			 id="supplierCity" title="supplier State"
-																			th:field="*{supCountry}">
-																				<option value=" ">Select</option>
-																				<option th:each="city :  ${listCity}"
-																					th:text="${city.cityName}"
-																					th:value=" ${city.cityCode}"></option>
+																	<label for="inputAddress">Supplier City</label> <select
+																		class="form-control" required id="supplierCity"
+																		title="supplier State" th:field="*{supCountry}">
+																		<option value=" ">Select</option>
+																		<option th:each="city :  ${listCity}"
+																			th:text="${city.cityName}"
+																			th:value=" ${city.cityCode}"></option>
 
 
-																		</select>
+																	</select>
 																</div>
 																<div class="form-group col-md-4">
 																	<label for="inputAddress">Form Type</label> <input
@@ -303,8 +299,7 @@
 																			style="width: 90px;">Qty</th>
 																		<th scope="col" class="text-center"
 																			style="width: 120px;">Total INR Value</th>
-																		<th scope="col" class="text-center"
-																			style="width: 90px;">Approval Status</th>
+
 
 
 																	</tr>
@@ -314,32 +309,32 @@
 
 
 																		<td><select
-																			class="select form-control form-control-sm indentContainer "
+																			class="select form-control form-control-sm indentContainer0 "
 																			id="indentNumber0" title="Location" required
 																			onchange="getIndentDetailByIndentNumber()"
 																			name="quotationItem[0].indentNum">
 																				<option value=" ">Select Indent Number</option>
-																				<option th:each="indent :  ${listIndentInRfq}"
+																				<!-- 	<option th:each="indent :  ${listIndentInRfq}"
 																					th:text="${indent.indentNumber}"
-																					th:value=" ${indent.indentNumber}"></option>
+																					th:value=" ${indent.indentNumber}"></option> -->
 
 																		</select></td>
 
 																		<td><input type="date" style="font-size: 0.95rem"
 																			title="indent date"
 																			class="form-control form-control-sm"
-																			name="quotationItem[0].indentDate" id="indentDate"
+																			name="quotationItem[0].indentDate" id="indentDate0"
 																			required></td>
 
 
 
 																		<td><input type="text" title="employee name"
 																			name="quotationItem[0].employee"
-																			class="form-control form-control-sm" id="empCode">
+																			class="form-control form-control-sm" id="empCode0">
 																		</td>
 
 																		<td><input type="text" title="uom"
-																			class="form-control form-control-sm" id="empName">
+																			class="form-control form-control-sm" id="empName0">
 																		</td>
 
 
@@ -358,29 +353,29 @@
 
 																		<td><input type="text"
 																			class="form-control form-control-sm" required
-																			id="uomCode" title=""></td>
+																			id="uomCode0" title=""></td>
 
-																		<td><input type="text"
+																		<td><input type="text" id="itemRate0"
 																			class="form-control form-control-sm" required
-																			name="quotationItem[0].rate" title=""></td>
-
-																		<td><input type="text"
-																			class="form-control form-control-sm" required
-																			title=""></td>
-
-
-																		<td><input type="text"
-																			class="form-control form-control-sm" required
-																			name="quotationItem[0].qtItemQty" title=""></td>
-
-																		<td><input type="text"
-																			class="form-control form-control-sm" required
-																			name="quotationItem[0].totalValue" title="">
-																		</td>
+																			name="quotationItem[0].rate" title=""
+																			onkeyup="totalInrValueCal()"></td>
 
 																		<td><input type="text"
 																			class="form-control form-control-sm" required
 																			title=""></td>
+
+
+																		<td><input type="text"
+																			class="form-control form-control-sm" required
+																			id="itemQty0" name="quotationItem[0].qtItemQty"
+																			onkeyup="totalInrValueCal()" title=""></td>
+
+																		<td><input type="text"
+																			class="form-control form-control-sm" required
+																			name="quotationItem[0].totalValue"
+																			id="totalInrValue0" title=""></td>
+
+
 
 
 
@@ -405,39 +400,39 @@
 
 														<div class="box-body">
 
-															<div class="row">
+															<div class="form-group row">
 
 																<div class="form-group m-5">
 																	<label for="inputEmail3" class="col-md-2 control-label">Total
 																		Discount</label>
 																	<div class="col-md-4">
-																		<input type="number" class="form-control"
-																			id="inputEmail3" placeholder="total discount">
+																		<input type="number" class="form-control" onkeyup="totalDiscountInPercentFun()"
+																			id="totalDiscountInPercent" placeholder="Total Discount(%)">
 																	</div>
 																	<div class="col-md-4">
 																		<input type="number" class="form-control"
-																			id="inputEmail3" placeholder="total discount">
+																			id="totalDiscountInValue" placeholder="Total Discount">
 																	</div>
 																</div>
 															</div>
 
 
-															<div class="row">
+															<div class="form-group row">
 
 																<div class="form-group m-5">
 																	<label for="inputEmail3" class="col-md-2 control-label">Discount</label>
 																	<div class="col-md-4">
-																		<input type="number" class="form-control"
-																			id="inputEmail3" placeholder="discount">
+																		<input type="number" class="form-control" onkeyup="discountInPercentFun()"
+																			id="discountInPercent" placeholder="Discount(%)">
 																	</div>
 																	<div class="col-md-4">
 																		<input type="number" class="form-control"
-																			id="inputEmail3" placeholder="discount">
+																			id="discountInValue" placeholder="Discount">
 																	</div>
 																</div>
 															</div>
 
-															<div class="row">
+															<!-- 	<div class="row">
 
 																<div class="form-group m-5">
 																	<label for="inputEmail3" class="col-md-2 control-label">CGST(%)</label>
@@ -450,73 +445,76 @@
 																			id="inputEmail3" placeholder="cgst">
 																	</div>
 																</div>
-															</div>
+															</div> -->
 
-															<div class="row">
+															<div class="form-group row">
 
 																<div class="form-group m-5">
 																	<label for="inputEmail3" class="col-md-2 control-label">Packing</label>
 																	<div class="col-md-4">
-																		<input type="number" class="form-control"
-																			id="inputEmail3" placeholder="packing">
+																		<input type="number" class="form-control" id="packing"
+																			placeholder="Packing">
 																	</div>
 
 																</div>
 															</div>
 
-															<div class="row">
 
-																<div class="form-group m-5">
-																	<label for="inputEmail3" class="col-md-2 control-label">SGST(%)</label>
-																	<div class="col-md-4">
-																		<input type="number" class="form-control"
-																			id="inputEmail3" placeholder="sgst">
-																	</div>
-																	<div class="col-md-4">
-																		<input type="number" class="form-control"
-																			id="inputEmail3" placeholder="sgst">
-																	</div>
-																</div>
-															</div>
 
-															<div class="row">
+															<div class="form-group row">
 
 																<div class="form-group m-5">
 																	<label for="inputEmail3" class="col-md-2 control-label">Freight</label>
 																	<div class="col-md-4">
-																		<input type="number" class="form-control"
-																			id="inputEmail3" placeholder="freight">
+																		<input type="number" class="form-control" id="freight"
+																			placeholder="Freight">
 																	</div>
 
 																</div>
 															</div>
 
-															<div class="row">
+
+															<div class="form-group row">
+
+																<div class="form-group m-5">
+																	<label for="inputEmail3" class="col-md-2 control-label">SGST(%)</label>
+																	<div class="col-md-4">
+																		<input type="number" class="form-control" id="sgstInPercent"
+																			placeholder="Sgst(%)" onkeyup="sgstInPercentFun()">
+																	</div>
+																	<div class="col-md-4">
+																		<input type="number" class="form-control" id="sgstInValue"
+																			placeholder="Sgst">
+																	</div>
+																</div>
+															</div>
+
+															<div class="form-group row">
 
 																<div class="form-group m-5">
 																	<label for="inputEmail3" class="col-md-2 control-label">CGST(%)</label>
 																	<div class="col-md-4">
-																		<input type="number" class="form-control"
-																			id="inputEmail3" placeholder="cgst">
+																		<input type="number" class="form-control" id="cgstInPercent"
+																			placeholder="Cgst(%)" onkeyup="cgstInPercentFun()">
 																	</div>
 																	<div class="col-md-4">
-																		<input type="number" class="form-control"
-																			id="inputEmail3" placeholder="cgst">
+																		<input type="number" class="form-control" id="cgstInValue"
+																			placeholder="Cgst">
 																	</div>
 																</div>
 															</div>
 
-															<div class="row">
+															<div class="form-group row">
 
 																<div class="form-group m-5">
 																	<label for="inputEmail3" class="col-md-2 control-label">IGST(%)</label>
 																	<div class="col-md-4">
-																		<input type="number" class="form-control"
-																			id="inputEmail3" placeholder="igst">
+																		<input type="number" class="form-control" id="igstInPercent"
+																			placeholder="Igst(%)" onkeyup="igstInPercentFun()">
 																	</div>
 																	<div class="col-md-4">
-																		<input type="number" class="form-control"
-																			id="inputEmail3" placeholder="igst">
+																		<input type="number" class="form-control" id="igstInValue"
+																			placeholder="Igst">
 																	</div>
 																</div>
 															</div>
@@ -527,25 +525,60 @@
 
 													<!--miscellaneas end -->
 
+
+													<div class="box">
+														<h5>Total Details</h5>
+														<div class="box-body">
+
+															<div class="row">
+
+																<div class="col-md-2"></div>
+																<div class="col-md-8  center ">
+
+																	<div class="row ">
+																		<div class="form-group col-md-6">
+																			<label for="inputEmail4">Total Value </label> <input
+																				type="text" class="form-control" id="totalRs"
+																				placeholder="Total Value">
+																		</div>
+																	</div>
+																	
+																	<div class="row ">
+																		<div class="form-group col-md-6">
+																			<label for="inputEmail4">Total Value (INR)</label> <input
+																				type="text" class="form-control" id="totalCount"
+																				placeholder="Total Value (INR)">
+																		</div>
+																	</div>
+
+
+																</div>
+																<div class="col-md-2"></div>
+
+
+															</div>
+
+														</div>
+
+													</div>
+													<!--end  detail -->
+
+
+
+
+													<!--</div>-->
+													<!--end main div content-->
+
+
+
 												</div>
-												<!--end  detail -->
-
-
-
-
-												<!--</div>-->
-												<!--end main div content-->
-
 
 
 											</div>
 
-
-										</div>
-
-										<div class="box-footer">
-											<button type="submit" class="btn btn-primary">Submit</button>
-										</div>
+											<div class="box-footer">
+												<button type="submit" class="btn btn-primary">Submit</button>
+											</div>
 								</form>
 
 
@@ -591,7 +624,6 @@
 					$("#rfqDate").val(data.rfqDate)
 
 					supplierList(rfqNumber)
-					indentList(rfqNumber)
 
 				},
 				error : function() {
@@ -632,7 +664,7 @@
 
 							$('.suppContainer').html(options);
 
-						
+							indentList(rfqNumber)
 						},
 						error : function() {
 							console.log("Error");
@@ -646,60 +678,79 @@
 			console.log("supplier id is : " + supplierId)
 
 			$.ajax({
-				type: "GET",
-				url: "supplierinfo/" + supplierId,
+				type : "GET",
+				url : "supplierinfo/" + supplierId,
 
-				success: function(data) {
+				success : function(data) {
 					console.log("ite data is : " + data)
 
 					//$("#supplierAdd").val(data.partyAddr1)
 					$("#supplierCity").val(data.cityCode)
 					$("#supplierState").val(data.stateCode)
 					$("#supplierName").val(data.partyName)
-				}, error: function() {
+				},
+				error : function() {
 					console.log("Error");
 				}
 			});
+
+		}
+
+		function indentList(rfqNumber) {
+
+			console.log("indent list ====> ")
+			$
+					.ajax({
+						type : "GET",
+						url : "indentlist/" + rfqNumber,
+
+						success : function(data) {
+							console.log("indent list   is : "
+									+ JSON.stringify(data))
+
+							var options = '<option value=""><strong>Select</strong></option>';
+							$(data)
+									.each(
+											function(index, value) {
+
+												console.log("item info : "
+														+ value.indentNumber)
+												console.log("item info : "
+														+ value.indentNumber)
+
+												options += '<option value="' + value.indentNumber + '">'
+														+ value.indentNumber
+														+ '</option>';
+
+											});
+
+							$('.indentContainer0').html(options);
+
+						},
+						error : function() {
+							console.log("Error");
+						}
+					});
+
+		}
+
+		//total value in inr against single row 
+		function totalInrValueCal() {
+
+			var itemRate = document.getElementById("itemRate0").value;
+			console.log("item rate value is : " + itemRate)
+			var itemQty = document.getElementById("itemQty0").value;
+			console.log("item qty is : " + itemQty)
+
+			totalInrValue = itemRate * itemQty;
+
+			document.getElementById("totalInrValue0").value = totalInrValue;
+			
+			calculationOfTotalValue();
 
 		}
 		
-		function indentList(rfqNumber){
-			
-			console.log("indent list ")
-			$.ajax({
-				type: "GET",
-				url: "indentlist/" + rfqNumber,
-
-				success: function(data) {
-					console.log("ite data is : " + data)
-					
-					
-					var options = '<option value=""><strong>Select</strong></option>';
-					$(data)
-							.each(
-									function(index, value) {
-
-										console.log("item info : "
-												+ value.indentNumber)
-										console.log("item info : "
-												+ value.indentNumber)
-
-										options += '<option value="' + value.indentNumber + '">'
-												+ value.indentNumber
-												+ '</option>';
-
-									});
-
-					$('.indentContainer').html(options);
-
-
-				
-				}, error: function() {
-					console.log("Error");
-				}
-			});
-			
-		}
+		
 	</script>
 	<!--   <section class="content">
         
