--- a/src/main/webapp/resources/stockRegisterReport.jrxml
+++ b/src/main/webapp/resources/stockRegisterReport.jrxml
@@ -1,7 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.18.1.final using JasperReports Library version 6.18.1-9d75d1969e774d4f179fb3be8401e98a0e6d1611  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="stockRegisterReport" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="d5e50c0f-0472-4dc1-8f5d-62884b9e6e1d">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="stockRegisterReport" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="d5e50c0f-0472-4dc1-8f5d-62884b9e6e1d">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
+	<property name="com.jaspersoft.studio.unit." value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.pageHeight" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.pageWidth" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.topMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.bottomMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.leftMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.rightMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
 	<style name="Table_TH" mode="Opaque" backcolor="#F0F8FF">
 		<box>
 			<pen lineWidth="0.5" lineColor="#000000"/>
@@ -42,11 +51,11 @@
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="52" splitType="Stretch">
+		<band height="57" splitType="Stretch">
 			<staticText>
-				<reportElement x="0" y="12" width="550" height="30" uuid="334a0594-c360-4711-94f2-1fce3d7b2b26"/>
+				<reportElement mode="Opaque" x="-2" y="20" width="802" height="30" backcolor="#999191" uuid="334a0594-c360-4711-94f2-1fce3d7b2b26"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font size="12" isBold="true"/>
+					<font size="16" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Stock Register Report]]></text>
 			</staticText>
@@ -54,16 +63,6 @@
 	</title>
 	<pageHeader>
 		<band height="78" splitType="Stretch">
-			<staticText>
-				<reportElement x="1" y="1" width="50" height="20" uuid="3ddb0a24-a009-4a87-ac0a-6ef0cda8203b">
-					<property name="com.jaspersoft.studio.unit.width" value="px"/>
-					<property name="com.jaspersoft.studio.unit.height" value="px"/>
-				</reportElement>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font size="9"/>
-				</textElement>
-				<text><![CDATA[From Date :]]></text>
-			</staticText>
 			<staticText>
 				<reportElement x="-2" y="22" width="92" height="20" uuid="e020c889-9928-48c2-8da4-317cf557bbf7">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
@@ -83,7 +82,7 @@
 				<text><![CDATA[Unit :]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="180" y="8" width="60" height="20" uuid="e8e51ced-7865-47a1-ac91-1a6b71d46c3f"/>
+				<reportElement x="247" y="4" width="60" height="20" uuid="e8e51ced-7865-47a1-ac91-1a6b71d46c3f"/>
 				<text><![CDATA[To Date:]]></text>
 			</staticText>
 			<staticText>
@@ -98,12 +97,22 @@
 				<reportElement x="458" y="6" width="62" height="16" uuid="2516adff-b438-4dfe-abd3-8c5fb2eeb798"/>
 				<text><![CDATA[Code No :]]></text>
 			</staticText>
+			<staticText>
+				<reportElement x="130" y="4" width="50" height="20" uuid="3ddb0a24-a009-4a87-ac0a-6ef0cda8203b">
+					<property name="com.jaspersoft.studio.unit.width" value="px"/>
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				</reportElement>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="9"/>
+				</textElement>
+				<text><![CDATA[From Date :]]></text>
+			</staticText>
 		</band>
 	</pageHeader>
 	<detail>
 		<band height="253" splitType="Stretch">
 			<componentElement>
-				<reportElement x="-20" y="20" width="610" height="200" uuid="4d417609-f58d-4bb5-ae19-a9209139ead0">
+				<reportElement x="-2" y="20" width="802" height="200" uuid="4d417609-f58d-4bb5-ae19-a9209139ead0">
 					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.VerticalRowLayout"/>
 					<property name="com.jaspersoft.studio.table.style.table_header" value="Table_TH"/>
 					<property name="com.jaspersoft.studio.table.style.column_header" value="Table_CH"/>
@@ -113,11 +122,11 @@
 					<datasetRun subDataset="Dataset1" uuid="12a6f8b1-4fb7-4263-9654-733ba1f7d342">
 						<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
 					</datasetRun>
-					<jr:column width="30" uuid="46796bc4-7fcd-45f1-bc26-5ad29297bdf8">
+					<jr:column width="42" uuid="46796bc4-7fcd-45f1-bc26-5ad29297bdf8">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column1"/>
 						<jr:tableHeader style="Table_TH" height="30" rowSpan="1">
 							<staticText>
-								<reportElement x="0" y="0" width="30" height="30" uuid="f5f631b8-94b0-4092-b0b0-da92cf04cf11"/>
+								<reportElement mode="Opaque" x="0" y="0" width="42" height="30" forecolor="#F0F0F0" backcolor="#120D0C" uuid="f5f631b8-94b0-4092-b0b0-da92cf04cf11"/>
 								<textElement textAlignment="Center" verticalAlignment="Middle" markup="styled">
 									<font size="9" isBold="true"/>
 								</textElement>
@@ -126,25 +135,27 @@
 						</jr:tableHeader>
 						<jr:detailCell style="Table_TD" height="30"/>
 					</jr:column>
-					<jr:column width="60" uuid="dc3b04ec-c07d-4645-bcf5-be80c928748b">
+					<jr:column width="71" uuid="dc3b04ec-c07d-4645-bcf5-be80c928748b">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column2"/>
 						<jr:tableHeader style="Table_TH" height="30" rowSpan="1">
 							<property name="com.jaspersoft.studio.unit.width" value="px"/>
 							<staticText>
-								<reportElement x="0" y="0" width="60" height="30" uuid="781c5fd6-2e59-4392-8eb4-e25ab27199f1"/>
+								<reportElement mode="Opaque" x="0" y="0" width="71" height="30" forecolor="#F0F0F0" backcolor="#120D0C" uuid="781c5fd6-2e59-4392-8eb4-e25ab27199f1"/>
 								<textElement textAlignment="Center" verticalAlignment="Middle" markup="styled">
 									<font size="9" isBold="true"/>
 								</textElement>
 								<text><![CDATA[Date]]></text>
 							</staticText>
 						</jr:tableHeader>
-						<jr:detailCell style="Table_TD" height="30"/>
+						<jr:detailCell style="Table_TD" height="30">
+							<property name="com.jaspersoft.studio.unit.width" value="px"/>
+						</jr:detailCell>
 					</jr:column>
-					<jr:column width="80" uuid="17571cae-bab7-4502-9e87-23ff603ddd63">
+					<jr:column width="114" uuid="17571cae-bab7-4502-9e87-23ff603ddd63">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column3"/>
 						<jr:tableHeader style="Table_TH" height="30" rowSpan="1">
 							<staticText>
-								<reportElement x="0" y="0" width="80" height="30" uuid="77fffb7a-857a-442d-8238-330543f15c88"/>
+								<reportElement mode="Opaque" x="0" y="0" width="114" height="30" forecolor="#F0F0F0" backcolor="#120D0C" uuid="77fffb7a-857a-442d-8238-330543f15c88"/>
 								<textElement textAlignment="Center" verticalAlignment="Middle" markup="styled">
 									<font size="9" isBold="true"/>
 								</textElement>
@@ -155,11 +166,11 @@
 							<property name="com.jaspersoft.studio.unit.width" value="px"/>
 						</jr:detailCell>
 					</jr:column>
-					<jr:column width="100" uuid="2d69eb71-7b2c-424f-93cc-276941bc289e">
+					<jr:column width="142" uuid="2d69eb71-7b2c-424f-93cc-276941bc289e">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column4"/>
 						<jr:tableHeader style="Table_TH" height="30" rowSpan="1">
 							<staticText>
-								<reportElement x="0" y="0" width="100" height="30" uuid="bf22f714-b064-42af-b336-b49ee213f2b0"/>
+								<reportElement mode="Opaque" x="0" y="0" width="142" height="30" forecolor="#F0F0F0" backcolor="#120D0C" uuid="bf22f714-b064-42af-b336-b49ee213f2b0"/>
 								<textElement textAlignment="Center" verticalAlignment="Middle" markup="styled">
 									<font size="9" isBold="true"/>
 								</textElement>
@@ -174,7 +185,7 @@
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column5"/>
 						<jr:tableHeader style="Table_TH" height="30" rowSpan="1">
 							<staticText>
-								<reportElement x="0" y="0" width="80" height="30" uuid="b7496d4e-cfe4-49b8-9bb2-e48267dfefda"/>
+								<reportElement mode="Opaque" x="0" y="0" width="80" height="30" forecolor="#F0F0F0" backcolor="#120D0C" uuid="b7496d4e-cfe4-49b8-9bb2-e48267dfefda"/>
 								<textElement textAlignment="Center" verticalAlignment="Middle" markup="styled">
 									<font size="9" isBold="true"/>
 								</textElement>
@@ -185,11 +196,11 @@
 							<property name="com.jaspersoft.studio.unit.width" value="px"/>
 						</jr:detailCell>
 					</jr:column>
-					<jr:column width="60" uuid="8c9788ab-667e-4766-8ad7-f87f49e24791">
+					<jr:column width="85" uuid="8c9788ab-667e-4766-8ad7-f87f49e24791">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column6"/>
 						<jr:tableHeader style="Table_TH" height="30" rowSpan="1">
 							<staticText>
-								<reportElement x="0" y="0" width="60" height="30" uuid="7f6be1bb-57b5-41d4-934d-64a0929e1e83"/>
+								<reportElement mode="Opaque" x="0" y="0" width="85" height="30" forecolor="#F0F0F0" backcolor="#120D0C" uuid="7f6be1bb-57b5-41d4-934d-64a0929e1e83"/>
 								<textElement textAlignment="Center" verticalAlignment="Middle" markup="styled">
 									<font size="9" isBold="true"/>
 								</textElement>
@@ -198,11 +209,11 @@
 						</jr:tableHeader>
 						<jr:detailCell style="Table_TD" height="30"/>
 					</jr:column>
-					<jr:column width="50" uuid="335b9e55-a7e9-4ba7-b9f4-32d79168765b">
+					<jr:column width="71" uuid="335b9e55-a7e9-4ba7-b9f4-32d79168765b">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column7"/>
 						<jr:tableHeader style="Table_TH" height="30" rowSpan="1">
 							<staticText>
-								<reportElement x="0" y="0" width="50" height="30" uuid="7f96e44d-8787-4185-bd68-f7ea7045f604"/>
+								<reportElement mode="Opaque" x="0" y="0" width="71" height="30" forecolor="#F0F0F0" backcolor="#120D0C" uuid="7f96e44d-8787-4185-bd68-f7ea7045f604"/>
 								<textElement textAlignment="Center" verticalAlignment="Middle" markup="styled">
 									<font size="9" isBold="true"/>
 								</textElement>
@@ -213,11 +224,11 @@
 							<property name="com.jaspersoft.studio.unit.width" value="px"/>
 						</jr:detailCell>
 					</jr:column>
-					<jr:column width="50" uuid="45d32694-6a79-4098-9178-66ed0a99edfb">
+					<jr:column width="70" uuid="45d32694-6a79-4098-9178-66ed0a99edfb">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column8"/>
 						<jr:tableHeader style="Table_TH" height="30" rowSpan="1">
 							<staticText>
-								<reportElement x="0" y="0" width="50" height="30" uuid="9280afb4-1e14-41b7-ae6c-ce807de76593"/>
+								<reportElement mode="Opaque" x="0" y="0" width="70" height="30" forecolor="#F0F0F0" backcolor="#120D0C" uuid="9280afb4-1e14-41b7-ae6c-ce807de76593"/>
 								<textElement textAlignment="Center" verticalAlignment="Middle" markup="styled">
 									<font size="9" isBold="true"/>
 								</textElement>
@@ -228,11 +239,11 @@
 							<property name="com.jaspersoft.studio.unit.width" value="px"/>
 						</jr:detailCell>
 					</jr:column>
-					<jr:column width="40" uuid="d922557a-1446-49dc-912f-9e8e45313a5a">
+					<jr:column width="56" uuid="d922557a-1446-49dc-912f-9e8e45313a5a">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column9"/>
 						<jr:tableHeader style="Table_TH" height="30" rowSpan="1">
 							<staticText>
-								<reportElement x="0" y="0" width="40" height="30" uuid="5a276833-a98b-471a-80d1-4769121d0cae"/>
+								<reportElement mode="Opaque" x="0" y="0" width="56" height="30" forecolor="#F0F0F0" backcolor="#120D0C" uuid="5a276833-a98b-471a-80d1-4769121d0cae"/>
 								<textElement textAlignment="Center" verticalAlignment="Middle" markup="styled">
 									<font size="9" isBold="true"/>
 								</textElement>
@@ -241,11 +252,11 @@
 						</jr:tableHeader>
 						<jr:detailCell style="Table_TD" height="30"/>
 					</jr:column>
-					<jr:column width="50" uuid="99d53d96-9a75-407d-90c9-5428706bded5">
+					<jr:column width="71" uuid="99d53d96-9a75-407d-90c9-5428706bded5">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column10"/>
 						<jr:tableHeader style="Table_TH" height="30" rowSpan="1">
 							<staticText>
-								<reportElement x="0" y="0" width="50" height="30" uuid="b63c708c-935d-4491-8f02-1302369fb746"/>
+								<reportElement mode="Opaque" x="0" y="0" width="71" height="30" forecolor="#F0F0F0" backcolor="#120D0C" uuid="b63c708c-935d-4491-8f02-1302369fb746"/>
 								<textElement textAlignment="Center" verticalAlignment="Middle">
 									<font size="9" isBold="true"/>
 								</textElement>
@@ -258,13 +269,4 @@
 			</componentElement>
 		</band>
 	</detail>
-	<columnFooter>
-		<band height="45" splitType="Stretch"/>
-	</columnFooter>
-	<pageFooter>
-		<band height="54" splitType="Stretch"/>
-	</pageFooter>
-	<summary>
-		<band height="42" splitType="Stretch"/>
-	</summary>
 </jasperReport>
